<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5sp"
        android:text="@string/startTime"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="30sp" />

     <TextView
         android:id="@+id/hanziTextView"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:clickable="true"
         android:ems="10"
         android:gravity="center"
         android:textSize="50sp" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp" />
    
      <CheckBox
            android:id="@+id/CheckBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NightMode"
            android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/playButtonLabel"
            android:textSize="70sp" />

        <Button
            android:id="@+id/hanziButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:longClickable="true"
            android:text="@string/hanziButtonLabel"
            android:textSize="70sp" />
        
        <Button
            android:id="@+id/repeatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/repeatButtonLabel"
            android:textSize="70sp" />
        
        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/pauseButtonLabel"
            android:textSize="70sp" />

<!--         <ImageButton -->
<!--             android:id="@+id/pauseButton" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:background="#0000ff" -->
<!--             android:contentDescription="@string/buttonLabel" -->
<!--             android:src="@drawable/ic_action_search" /> -->

    </LinearLayout>

</LinearLayout>